--- a/list-pic.html
+++ b/list-pic.html
@@ -44,7 +44,7 @@
     </div>
     
     <div class="content-box">
-    	<h1>设备列表</h1>
+    	<h1 id="title-pic">设备列表</h1>
         <ul class="clearfix" style=" width:705px; margin-left:-10px;" id="pic-list">
             <!--<li class="pic">-->
             	<!--<div class="img-box">-->
