--- a/detail-pic.html
+++ b/detail-pic.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all"/>
     <script src="js/jquery-1.8.3.min.js"></script>
     <script src="js/common/common.js"></script>
-    <script src="js/list-pic.js"></script>
+    <script src="js/detail-pic.js"></script>
     <script src="js/menu.js"></script>
 </head>
 
