--- a/detail.html
+++ b/detail.html
@@ -34,7 +34,7 @@
     </ul>
 </div>
 
-<div id="slider-box" style="background:url(images/slider4.jpg) center center;"></div>
+<div id="slider-box" style="background:url(images/slider4-2.png) center center;"></div>
 <!-- detail -->
 <div id="detail2-box" class="clearfix">
 	<div class="tit-80"><a href="list-text2.html">公司公告</a> - 公告详情</div>
