--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p><img src="images/p-img.jpg" align="left">
             中铁七局集团郑州工程装备有限公司的前身是郑州铁路建设集团有限公司，始建于1953年，2003年12月重组成为世界五百强企业-中国中铁股份有限公司(601390.SH/01390.HK)下辖中铁七局集团有限公司全资子公司，公司位于河南省郑州市陇海中路3号。
             公司现有员工2750名，其中技术工人1078名，各类专业技术人员1152名，具有中、高级技术职称的352名，80余人取得了国家一级注册建造师执业资格证书。公司资产总值28亿元，年生产能力达45亿元以上。
-            <a href="detail1.html">查看更多...</a></p>
+            <a href="other.html?key=gsjj">查看更多...</a></p>
     </div>
     <div class="index1-right300">
         <div class="title-box">通知公告<a href="detail.html" class="title-more" title="查看更多"><img
