--- a/other.html
+++ b/other.html
@@ -1,4 +1,5 @@
-<!doctype html>
+
+	<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -6,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all"/>
     <script src="js/jquery-1.8.3.min.js"></script>
     <script src="js/common/common.js"></script>
-    <script src="js/list-pic.js"></script>
+    <script src="js/other.js"></script>
     <script src="js/menu.js"></script>
 </head>
 
@@ -36,16 +37,16 @@
 <div id="slider-box" style="background:url(images/slider4-2.png ) center center;"></div>
 <!-- detail -->
 <div id="detail2-box" class="clearfix">
-	<div class="tit-80"><a href="list-text2.html">设备实力</a> - 查看详情</div>
-    <div class="tabula-box">
+	<div class="tit-80"><a href="list-text2.html" id='other-title'>人员实力</a></div>
+    <!-- <div class="tabula-box">
     	<div class="max-tit">设备类型</div>
         <ul id="list-pic-ul">
         </ul>
-    </div>
+    </div> -->
     
-    <div class="content-box">
-    	<h1 id="title-pic">设备列表</h1>
-        <ul class="clearfix" style=" width:705px; margin-left:-10px;" id="pic-list">
+    <div class="content-box" style="width:956px;">
+    	<!-- <h1 id="title-pic">人员列表</h1> -->
+        <ul class="clearfix" style=" width:956px; margin-left:-10px;margin-bottom:40px;" id="pic-list">
             <!--<li class="pic">-->
             	<!--<div class="img-box">-->
                 	<!--<a href="detail2.html">-->
