--- a/list-pic.html
+++ b/list-pic.html
@@ -13,7 +13,7 @@
 <body>
 <div id="hearder2" class="clearfix">
     <div class="logo">
-        <!--<img src="images/logo.png">-->
+        <img src="images/logo.png">
     </div>
     <div class="logo-name">中铁七局集团郑州工程装备有限公司</div>
     <div class="form-tools">
